[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "p2colab"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

authors = [
  { name="Josh Hunt", email="jbhunt303@gmail.com" }
]

dependencies = [
  "numpy",
  "torch",
  "scikit-learn",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]